--- a/index.Rmd
+++ b/index.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ```{r htmlTemplate, echo=FALSE}
 # Create the external file
-img <- htmltools::img(src = "img/logo.png", 
+img <- htmltools::img(src = "./img/logo.png", 
                alt = 'logo', 
                style = 'position:absolute; top:100px; right:5%; height:60px; max-width:100%; z-index:3;')
 
