--- a/index.Rmd
+++ b/index.Rmd
@@ -16,11 +16,12 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
+
 ```
 
 ```{r htmlTemplate, echo=FALSE}
 # Create the external file
-img <- htmltools::img(src = "./img/logo.png", 
+img <- htmltools::img(src = here::here("img/logo.png"), 
                alt = 'logo', 
                style = 'position:absolute; top:100px; right:5%; height:60px; max-width:100%; z-index:3;')
 
