--- a/09-resources.Rmd
+++ b/09-resources.Rmd
@@ -7,7 +7,7 @@ If you have questions about your program, need guidance regarding policy and pro
 If you have payment or banking questions, message [Joanne Dean](https://frm.forestry.ubc.ca/people/staff/) at `joanne.dean@ubc.ca`. Joanne is the administrative manager for the Department of Forest Resources Management.
 
 ```{r, echo=FALSE, out.width="100%",fig.align = 'center', fig.cap="View from UBC looking north west to [Bowen Island](https://www.tourismbowenisland.com/)."}
-knitr::include_graphics("img\\ubc1.png")
+knitr::include_graphics(here::here("img\\ubc1.png"))
 ```
 
 ## UBC resources - admin {-#resourcesubc}
@@ -33,7 +33,7 @@ If you have not yet looked into accommodation at UBC or in Vancouver check out t
 If you are looking for housing off campus, resources like [Craigslist](https://vancouver.craigslist.org/d/apartments-housing-for-rent/search/apa),  [Kijiji](https://www.kijiji.ca/b-apartments-condos/vancouver/house/c37l1700287a29276001), and [uvrentsline](https://www.uvrentsline.com/) are good places to start.
 
 ```{r, echo=FALSE, out.width="100%",fig.align = 'center',fig.cap="Looking north from Cambie street and 10th Ave."}
-knitr::include_graphics("img\\vancouver1.png")
+knitr::include_graphics("img\\vancouver1.png"))
 ```
 
 ### Transit {-#transit}
