--- a/01-nccmsg.Rmd
+++ b/01-nccmsg.Rmd
@@ -1,7 +1,7 @@
 # A message from Nicholas - A {-#nccmsg}
 
 ```{r, echo=FALSE, out.width="50%",fig.align = 'center',fig.cap="Nicholas delivering a presentation."}
-knitr::include_graphics(here::here("img\\ncc.jpg"))
+knitr::include_graphics(here::here("img/ncc.jpg"))
 ```
 
 It's a pleasure to welcome you into the lab and [I'm](https://forestry.ubc.ca/faculty-profile/nicholas-coops/) very much looking forward to working with you on the project that you have come here to do, and have a fun filled and rich learning environment. While you are here for your project, being a graduate student as you I'm sure realize, is very different than being an undergraduate. In the IRSS lab we have a very flat structure with post-docs, PhD's, Master's, and work learn students all treated similarly. Collaboration is strongly encouraged in the lab, so be sure to use the resources available to you and ask your fellow students questions when you have them.
@@ -13,7 +13,7 @@ The IRSS is situated on the traditional, ancestral, and unceded territory of the
 We welcome diversity within the Integrated Remote Sensing Studio. People of varying race, nationality, gender identification, sexual orientation, beliefs, age, disability status, and discipline make us stronger as a group and more compassionate and inclusive human beings. We recognize that we all work differently, and that we all have valuable ideas to contribute. We understand that working together is more fun and creative than working alone. We recognize a wide range of successes and that success for one is an achievement for all.
 
 ```{r, echo=FALSE, out.width="100%",fig.align = 'center',fig.cap="[The Indigenous Strategic Plan: An Overview](https://ctlt.ubc.ca/2020/11/24/edubytes-the-indigenous-strategic-plan-overview/) - CC BY SA 4.0"}
-knitr::include_graphics(here::here("img\\pole-CC.jpg"))
+knitr::include_graphics(here::here("img/pole-CC.jpg"))
 ```
 
 The [Faculty of Forestry](https://forestry.ubc.ca/news/statement-by-the-chair-of-equity-diversity-and-inclusion-council/) has released values statements that we fully endorse. We are proponents of involvement in initiatives like the [Forestry Diversity Crew](https://diversity.forestry.ubc.ca/) and encourage students and staff (new and old) to get involved. We also encourage anyone to access and familiarize themselves with [UBC resources related to equity, inclusion, and diversity](https://equity.ubc.ca/resources/).
@@ -27,5 +27,5 @@ The process of undertaking research and collaborating with others is a fantastic
 As you feel more comfortable and get to know everyone better, it is my true hope that the friendships that you form will last with you a lifetime, and that as you move through your career once you leave UBC you will stay in touch with past, current and future lab members, and immediately gravitate to each other and build new collaborations and projects.
 
 ```{r, echo=FALSE, out.width="100%",fig.align = 'center',fig.cap="The entrance to the lab. Welcome!"}
-knitr::include_graphics(here::here("img\\expectations.jpg"))
+knitr::include_graphics(here::here("img/expectations.jpg"))
 ```
