--- a/irss-welcome.Rmd
+++ b/irss-welcome.Rmd
@@ -118,6 +118,14 @@ IRSS Slack contains several channels, each serving different purposes. The most 
 
 You’ll quickly notice that the conversations on Slack (especially on #general) are often very relaxed. However, remember that all public channels are PG-13.
 
+In using slack you are agreeing to have acknowledged the following disclaimer:
+
+```
+Your personal information is collected under the authority of section 26(c) of the Freedom of Information and Protection of Privacy Act (FOIPPA). This information will be used for the purpose of managing your registration and account with Slack. Your personal information will be stored on a secure service within the USA. 
+
+Questions about the collection of this information may be directed to forestry.ithelp@ubc.ca.
+```
+
 ## Email {-#email}
 
 Nicholas's primary email is `nicholas.coops@ubc.ca`. He generally tries to respond to emails as quickly as possible, but if he hasn’t replied to you in 2 days, send him a reminder. His emails can often be short and direct, he sends a lot of them daily!
