--- a/08-thesis.Rmd
+++ b/08-thesis.Rmd
@@ -258,4 +258,4 @@ knitr::include_graphics(here::here("img/conference2.jpg"))
 knitr::include_graphics(here::here("img/conference1.jpg"))
 ```
 
-During these conferences, you are typically eligible for a per diem (up to $60 USD per day). You should track the days you are away and submit an expense report to get reimbursed. To do so, visit the [workday portal](https://hr.ubc.ca/working-ubc/welcome-workday). From there, click on 'Expenses' in the main menu, and submit a report. If you have any other questions, you can email [Gladys Tecson](https://frm.forestry.ubc.ca/people/staff/) (`gladys.tecson@ubc.ca`). It takes a little while to be processed, but you will be reimbursed.
+During these conferences, you are typically eligible for a per diem (up to $100 CAD or $80 USD per day). You should track the days you are away and submit an expense report to get reimbursed. To do so, visit the [workday portal](https://hr.ubc.ca/working-ubc/welcome-workday). From there, click on 'Expenses' in the main menu, and submit a report. If you have any other questions, you can email [Gladys Tecson](https://frm.forestry.ubc.ca/people/staff/) (`gladys.tecson@ubc.ca`). It takes a little while to be processed, but you will be reimbursed.
