--- a/index.Rmd
+++ b/index.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ```{r htmlTemplate, echo=FALSE}
 # Create the external file
-img <- htmltools::img(src = here::here("img/IRSS_gif.gif"), 
+img <- htmltools::img(src = here::here("img/logo.png"), 
                alt = 'logo', 
                style = 'position:absolute; top:100px; right:5%; height:60px; max-width:100%; z-index:3;')
 
@@ -58,5 +58,5 @@ This document is a brief introduction to the IRSS lab. It provides:
 * [Resources](#resources) for anyone new to UBC or Vancouver
 
 ```{r, echo=FALSE, out.width="50%",fig.align = 'center'}
-knitr::include_graphics(here::here("img/logo.png"))
+knitr::include_graphics(here::here("img/IRSS_gif.gif"))
 ```
