--- a/irss-welcome.Rmd
+++ b/irss-welcome.Rmd
@@ -58,7 +58,7 @@ This document is a brief introduction to the IRSS lab. It provides:
 * [Resources](#resources) for anyone new to UBC or Vancouver
 
 ```{r, echo=FALSE, out.width="50%",fig.align = 'center'}
-knitr::include_graphics(here::here("img/logo.png"))
+knitr::include_graphics(here::here("img/IRSS_gif.gif"))
 ```
 
 <!--chapter:end:index.Rmd-->
