update byuser instructions

--- a/03-computers.Rmd
+++ b/03-computers.Rmd
@@ -101,8 +101,44 @@ ByProject contains datasets related to research projects. ByUser is a space for 
 
 It's important that you **do not use IRSS shared drives as your file backup folder** as storage space on these drives is limited.
 
-A tutorial on how  map these drives to your machine is available here: https://github.com/IRSS-UBC/NetworkShares/blob/main/README.md
+#### Connecting to ByUser and ByProject
+To connect to ByUser and ByProject, it is recommended to create a shortcut to the network paths. This will limit the number of active users on the shares, speeding up the upload and download process, and will prevent overwhelming the server when it is not in use.
 
+To do this:
+1. Open File Explorer to the location where you want the shortcuts (the desktop is a good choice).
+2. Right-click in a blank space and select **New > Shortcut**.
+3. Enter `\\frst-irsstor2\ByUser` as the location of the item.
+4. Click **Next**.
+5. Enter "ByUser" as the name for the shortcut.
+6. Click **Finish**.
+
+Follow the same steps for ByProject, replacing "ByUser" with "ByProject" in both the item location and the shortcut name.
+
+You can now access these shares by opening the shortcuts.
+
+#### Moving Files To/From Network
+To move files to or from the network shares, you **must** use the following robocopy command:
+
+`robocopy <SOURCE> <DESTINATION> /XA:SH /E /MT /ZB`
+
+
+**Command details:**
+- **robocopy**: The command itself, indicating that you want to use the Robocopy utility.
+- **`<SOURCE>`**: The source directory or path. Replace `<SOURCE>` with the actual path (e.g., "P:/") of the directory you want to copy from (e.g., "\\\frst-irsstor2\ByProject\_CanadaLayers\Rasters\DEM").
+- **`<DESTINATION>`**: The destination directory or path. Replace `<DESTINATION>` with the actual path (e.g., "O:/") of the directory you want to copy to (e.g., "\\\frst-irsstor2\ByUser\MurrayBrent").
+- **/XA:SH**: Excludes files with the "System" and "Hidden" attributes from being copied.
+- **/E**: Copies subdirectories, including empty ones.
+- **/MT**: Enables multi-threaded copying (the default is 8).
+- **/ZB**: Uses restartable mode, allowing the copy to resume if interrupted.
+
+*Note: These network shares are for storing data only. DO NOT work directly off these shares; copy the files you need to your local machine and process your data locally.*
+
+#### Additional Notes
+- On the second Tuesday night of every month, the network shares will be rebooted. This reboot removes any lock files that may accumulate on the network when files are accessed directly rather than being copied locally. Please do not copy any files during this time, as doing so may result in corrupted files or missing data.
+
+- Please do not map the network drives to a drive letter (old way) but create a shortcut instead!
+
+---
 
 ## Connecting from home {-#rdp}
 
