--- a/03-computers.Rmd
+++ b/03-computers.Rmd
@@ -121,7 +121,10 @@ To move files to or from the network shares, you **must** use the following robo
 
 `robocopy <SOURCE> <DESTINATION> /XA:SH /E /MT /ZB`
 
+**Additional Notes**
+On the second Tuesday night of every month, the network shares will be rebooted. This reboot removes any lock files that may accumulate on the network when files are accessed directly rather than being copied locally. Please do not copy any files during this time, as doing so may result in corrupted files or missing data.
 
+Please do not map the network drives to a drive letter (old way) but create a shortcut instead!
 
 ## Connecting from home {-#rdp}
 
